# swizzle

./: Gemfile  README.md  check_against_good.sh  clean.sh  config.ru  equivocating.cabal  get_words.hs  good  make.sh  make_prof.sh  profile.sh  puzzles  tasks  ui.haml  wordfucker.rb
public/: game.js
site/: index.html
src/: Main.hs
web-service/: Gemfile  wordfucker.rb
word-generation/: good-words  how-to-make-good-words.sh  make_site.sh
wordfucker/: Gemfile  wordfucker.rb
wordfucker/public/: game.js  styles.css
wordfucker/views/: index.haml
