Name:                equivocating
Version:             0.1
License:             OtherLicense
License-file:        LICENSE
Author:              Nick Partridge
Maintainer:          nkpart@gmail.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.2

Executable equivocating
  Main-is: src/Main.hs             
  
  Build-depends:
    base >=4 && <5,
    containers,
    process
  
  -- Other-modules:       
